# advanced_Computer_Vision

./: .gitignore  README.md  app.py  dis_corr.py  fall_features_extraction.py  main.py  pose_ana_corr.py  pyproject.toml
.streamlit/: config.toml
marie_pushups/: dis_corr.py  preprocessing.py
src/: analytics_classifier.py  extract_landmark.py  fall_features_extraction.py  features_extraction.py  preprocessing.py  ui_show_features.py  ui_show_features_local.py
thomas/: test.ipynb  test.py
