[project]
name = "advanced-computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.4.0",
    "jupyter>=1.1.1",
    "mediapipe>=0.10.21",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "streamlit-webrtc>=0.63.4",
]
